# gmatrix

./: DESCRIPTION  LICENSE  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: 00general.R  01gmatrix.R  02gvector.R  03dist.R  04operations.R  05test.R  07MCMC.R
gmatrix/: .project  DESCRIPTION  NAMESPACE  README.md
gmatrix/R/: 00general.R  01gmatrix.R  02gvector.R  03dist.R  04operations.R  05test.R
gmatrix/man/: BinaryOperators-methods.Rd  as.gmatrix-methods.Rd  as.numeric-methods.Rd  beta.Rd  binomial.Rd  checkDevice.Rd  crossprod-methods.Rd  diag-methods.Rd  dim-methods.Rd  g.Rd  gamma.Rd  gdup.Rd  ggc.Rd  gkroneckerProd.Rd  gmatrix-internal.Rd  gmatrix-package.Rd  gorder.Rd  gouter.Rd  gseq.Rd  gtest.Rd  gvector-class.Rd  indexing-methods.Rd  normal.Rd  poisson.Rd  rowLogSums.Rd  rsample.Rd  setDevice.Rd  setTuningPameters.Rd  show-methods.Rd  type.Rd  uniform.Rd
gmatrix/src/: Makefile  conversions.cu  dist.cu  general.cu  gmatrix.h  manipulation.cu  matrix.cu  ops.cu
man/: MathMethods.Rd  as.gmatrix-methods.Rd  basicHMC.Rd  binomial.Rd  checkDevice.Rd  chol.Rd  colMeans-methods.Rd  colnames-methods.Rd  convertType.Rd  device-methods.Rd  dimnames-methods.Rd  g.rep.Rd  gBasicHMC.Rd  gRowLogSums.Rd  gdup.Rd  ggc.Rd  gident.Rd  gmatTimesDiagVec.Rd  gmatrix-class.Rd  gmatrix-internal.Rd  gmatrix.Rd  gmm.Rd  gnamestrip.Rd  gorder.Rd  gqr-class.Rd  gset.seed.Rd  gsumby.Rd  gsvd-class.Rd  gvector.Rd  ifelse-methods.Rd  indexing-methods.Rd  length-methods.Rd  lpgr-class.Rd  max-methods.Rd  mean-methods.Rd  mm-methods.Rd  names-methods.Rd  ncol-methods.Rd  normal.Rd  poisson.Rd  (+7 more)
src/: Makefile  Makefile.in  conversions.cu  dist.cu  fact.cu  general.cu  gmatrix.h  manipulation.cu  matrix.cu  ops.cu
